--- a/homework/Assignment 1.ipynb
+++ b/homework/Assignment 1.ipynb
@@ -33,7 +33,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Application of python in models to predict outcomes of some sort. For example, to predict student final grade based on first exam results. "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -47,7 +49,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "https://drive.google.com/drive/u/0/folders/1iFHSDIEHuzDyVMPcMPiuF3_v8zxONgpz"
+   ]
   },
   {
    "cell_type": "markdown",
