--- a/classes/Week 2.ipynb
+++ b/classes/Week 2.ipynb
@@ -22,7 +22,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -199,12 +198,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# This is a comment. Python will ignore the # and everything after it.\n",
-    "x = 10 #This is also a comment."
+    "x = 10 #This is also a comment.\n"
    ]
   },
   {
@@ -225,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -235,8 +234,19 @@
       "Hello\n",
       "10\n",
       "10.0\n",
-      "10.0\n"
+      "10.0\n",
+      "50\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "50"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -246,10 +256,15 @@
     "some_float = 10.0\n",
     "some_other_float = float(10)\n",
     "\n",
+    "#it has to start with variables and underscores\n",
+    "_variance = 50\n",
+    "\n",
     "print(some_string)\n",
     "print(some_integer)\n",
     "print(some_float)\n",
-    "print(some_other_float)"
+    "print(some_other_float)\n",
+    "print (_variance)\n",
+    "_variance\n"
    ]
   },
   {
@@ -261,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +292,8 @@
    "source": [
     "print(type(some_string))\n",
     "print(type(some_integer))\n",
-    "print(type(some_float))"
+    "print(type(some_float))\n",
+    "#to know what is stored in a variable "
    ]
   },
   {
@@ -384,9 +400,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 'x', 'y', 'z', 'Hello', 10]\n"
+     ]
+    }
+   ],
    "source": [
     "some_list = [1, 2, 3, 'x', 'y', 'z', some_string, some_integer]\n",
     "print(some_list)"
@@ -394,9 +418,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Grab one item from a list:\n",
     "some_list[2]"
@@ -414,9 +449,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Get the last item from a list:\n",
     "some_list[-1]"
@@ -424,9 +470,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2]\n",
+      "[3, 'x', 'y', 'z', 'Hello', 10]\n"
+     ]
+    }
+   ],
    "source": [
     "# Get some items at the beginning or end of a list.\n",
     "print(some_list[:2])\n",
@@ -435,9 +490,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, '8', 'Hello', 10]\n"
+     ]
+    }
+   ],
    "source": [
     "#You can change lists in place.\n",
     "some_list[2:6] = '8'\n",
@@ -460,6 +523,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "some_list [4]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -468,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,9 +576,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Empty string\n",
     "bool('')"
@@ -503,9 +597,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Zero\n",
     "bool(0)"
@@ -513,9 +618,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#A string containing anything, including zeroes or spaces, is True.\n",
     "bool(\"  \")"
@@ -523,18 +639,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "bool('0')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Empty list:\n",
     "bool([])"
@@ -542,9 +680,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Non-empty list:\n",
     "bool([0, 0, 0, '', 0])"
@@ -566,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -589,7 +738,10 @@
     "twosquared = 2 ** 2\n",
     "\n",
     "#Modulo (remainder of division)\n",
-    "remainsof22dividedby7 = 22 % 7"
+    "remainsof22dividedby7 = 22 % 7\n",
+    "\n",
+    "twoplustwo + twosquared\n",
+    "some_integer=10 "
    ]
   },
   {
@@ -601,9 +753,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hi there'"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Concatenation:\n",
     "\"Hi\" + \" \" + \"there\""
@@ -611,9 +774,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hi thereHi thereHi thereHi thereHi there'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Multiplication:\n",
     "\"Hi there\" * 5"
@@ -628,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +925,7 @@
     }
    ],
    "source": [
-    "# Contains\n",
+    "# to see if a list Contains a variable\n",
     "\"This\" in ['This', 'That', 'The other']"
    ]
   },
@@ -787,6 +961,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello'"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "some_string"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 144,
    "metadata": {},
    "outputs": [
@@ -802,7 +996,7 @@
     }
    ],
    "source": [
-    "#Pick one letter from a string:\n",
+    "#Pick one letter from a string:the third\n",
     "some_string[3]"
    ]
   },
@@ -865,7 +1059,7 @@
     "if 1 == 2:\n",
     "    print(\"hello\")\n",
     "\n",
-    "# 10 is equal to 10.0\n",
+    "# 10 is equal to 10.0, you can have multiple lines but they should b indented equally\n",
     "if 10 == 10.0:\n",
     "    print(\"yes\")\n",
     "else:\n",
@@ -996,6 +1190,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H\n",
+      "e\n",
+      "l\n",
+      "l\n",
+      "o\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range (len(some_string)):\n",
+    "    print(some_string[i])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1055,6 +1271,23 @@
    ],
    "source": [
     "len(some_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, '8', 'Hello', 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(some_list)"
    ]
   },
   {
@@ -1218,6 +1451,74 @@
     "for i in range(5, 10, 2):\n",
     "    print(i)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Hello']"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "some_string.split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['H', 'llo']"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "some_string.split('e')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['13', '33', '66', '99', '10']"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "some_csv=\"13,33,66,99,10\"\n",
+    "some_csv.split(',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
